<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.moj</groupId>
    <artifactId>dlq-operations</artifactId>
    <version>0.2-SNAPSHOT</version>

    <properties>
        <additional-locale-parameter>-Djava.locale.providers=CLDR</additional-locale-parameter>
        <cpp-platform-data-utils.version>1.0.7</cpp-platform-data-utils.version>
        <mvn.site.url>file://${project.build.directory}/site</mvn.site.url>
        <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
        <commons-cli.version>1.4</commons-cli.version>
        <cpp.test-utils.version>1.24.0</cpp.test-utils.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-prepare-agent-integration</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>${jgitflow-maven-plugin.version}</version>
                <configuration>
                    <flowInitContext>
                        <masterBranchName>dev/release</masterBranchName>
                        <developBranchName>master</developBranchName>
                        <featureBranchPrefix>dev/feature-</featureBranchPrefix>
                        <releaseBranchPrefix>dev/release-</releaseBranchPrefix>
                        <hotfixBranchPrefix>dev/hotfix-</hotfixBranchPrefix>
                        <versionTagPrefix>v</versionTagPrefix>
                    </flowInitContext>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <enableSshAgent>true</enableSshAgent>
                    <pushReleases>true</pushReleases>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest><mainClass>uk.gov.moj.DlqMessages</mainClass></manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <site>
            <id>site</id>
            <url>${mvn.site.url}</url>
        </site>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>uk.gov.justice.utils</groupId>
            <artifactId>test-utils-core</artifactId>
            <version>1.24.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>uk.gov.moj.cpp.common.library.utils</groupId>
            <artifactId>cpp-platform-data-utils-test-utils</artifactId>
            <version>${cpp-platform-data-utils.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>23.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.10</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.19</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commons-cli.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.2</version>
        </dependency>
    </dependencies>

</project>